--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,7 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
+{% include head.html %}
+
+    <h1>{{ page.title }}</h1>
+
     {{ content }}
-  </body>
-</html>
+
+{% include foot.html %}
